<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <!--    First Row Start-->

    <ImageView
        android:id="@+id/iv_user_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintBottom_toTopOf="@id/gl_user_bottom"
        app:layout_constraintEnd_toStartOf="@id/gl_user_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/username"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_user_handle"
        app:layout_constraintEnd_toStartOf="@id/gl_button_start"
        app:layout_constraintStart_toEndOf="@id/gl_user_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_user_handle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/handle"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/gl_user_bottom"
        app:layout_constraintEnd_toStartOf="@id/gl_button_start"
        app:layout_constraintStart_toEndOf="@id/gl_user_image"
        app:layout_constraintTop_toBottomOf="@id/tv_username" />

    <Button
        android:id="@+id/btn_follow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/twitterBlue"
        android:fontFamily="sans-serif"
        android:text="@string/follow"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/gl_button_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gl_button_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <!--    Forst Row End-->

    <!--    Second Row Start-->

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/message"
        android:textSize="24sp"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@id/gl_message_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_user_bottom" />

    <!--    Second Row End-->

    <!--    Third Row Start-->
    <TextView
        android:id="@+id/tv_retweetsLabel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/retweetsLabel"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/tv_retweet"
        app:layout_constraintEnd_toStartOf="@id/tv_likesLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_message_bottom" />

    <TextView
        android:id="@+id/tv_likesLabel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/likesLabel"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/tv_likes"
        app:layout_constraintEnd_toEndOf="@id/gl_retweets_likes_end"
        app:layout_constraintStart_toEndOf="@id/tv_retweetsLabel"
        app:layout_constraintTop_toBottomOf="@id/gl_message_bottom" />

    <TextView
        android:id="@+id/tv_retweet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/retweets"
        android:textColor="@color/twitterBlue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_likes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_retweetsLabel" />

    <TextView
        android:id="@+id/tv_likes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/likes"
        android:textColor="@color/twitterBlue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gl_retweets_likes_end"
        app:layout_constraintStart_toEndOf="@id/tv_retweetsLabel"
        app:layout_constraintTop_toBottomOf="@id/tv_likesLabel" />
    <!--    Third Row End-->

    <!--    Fourth Row Start-->
    <TextView
        android:id="@+id/tv_date"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/Date"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gl_retweets_likes_end"
        app:layout_constraintTop_toBottomOf="@id/gl_message_bottom" />
    <!--    Fourth Row End-->

    <!--    Fifth Row Start-->

    <!--    Fifth Row End-->


    <!--    Constraint Guidellines -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_user_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="75dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_message_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="196dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_user_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="109dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_retweets_likes_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="255dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_button_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="42dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="96dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_retweets_likes_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="187dp" />
</androidx.constraintlayout.widget.ConstraintLayout>